--- a/css/style.css
+++ b/css/style.css
@@ -5,4 +5,22 @@
 body{
     background-color: hsl(240, 43%, 13%);
     color: #eee;
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+/*Estilos de todo el Header*/
+.header{
+    width: 100%;
+    padding: 10vmin;
+}
+.logo img{
+    width: 50px;
+}
+.article{
+    width: 100%;
+}
+.footer{
+    margin-top: auto;
 }
