--- a/css/style.css
+++ b/css/style.css
@@ -3,24 +3,77 @@
 }
 /*Estilos para el Body*/
 body{
-    background-color: hsl(240, 43%, 13%);
+    background-image: radial-gradient(circle,rgb(44, 44, 46),rgb(0, 0, 0));
     color: #eee;
     margin: 0;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
 }
-/*Estilos de todo el Header*/
-.header{
+/*Estilos del Header*/
+.header,
+.contenedor{
     width: 100%;
-    padding: 10vmin;
+    padding: 5vmin;
+    display: flex;
+    flex-direction: row;
 }
 .logo img{
-    width: 50px;
+   justify-content: start;
+    max-width: 350px;
+    max-height: 200px;
 }
-.article{
+.barra_nav{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(320px,1400px));
+}
+.menu{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border-left: 1px solid white;
+}
+.menu-item{
+    font-size: 1.5rem;
+    margin: 30px;
+    justify-content: center;
+    text-align: center;
+    height: 50px;
+    width: 200px;
+    line-height: 50px;
+}
+.menu-item:hover{
+    border-right: 1px solid white;
+    border-left: 1px solid white;
+    Text-shadow: 0px 2px 20px rgb(245, 236, 105);
+    color: rgb(105, 200, 245);
+}
+/*Final de Estilos para el Header*/
+/*Inicio de Estilos para el Articulo*/
+.articulo{
     width: 100%;
+    border: 1px solid;
 }
+/*Fin del Estilo para el articulo*/
+/*Inicio de estilos para el footer*/
 .footer{
     margin-top: auto;
+}
+.contenedor-logos{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(100px,100px));
+    grid-gap: 100px;
+    justify-content: center;
+    align-items: center;
+    grid-auto-flow: dense;
+}
+.logos-redes{
+    width: 100%;
+    height: 100%;
+    filter: saturate(0);
+}
+.logos-redes:hover{
+    filter: none;
 }
