--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body{
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    font-family:'Montserrat','Open Sans','Roboto', sans-serif;
 }
 /*Estilos del Header*/
 .header,
@@ -51,15 +52,36 @@ body{
     color: rgb(105, 200, 245);
 }
 /*Final de Estilos para el Header*/
+
 /*Inicio de Estilos para el Articulo*/
 .articulo{
+    font-family: 'Roboto';
+    font-size: 1rem;
     width: 100%;
     border: 1px solid;
+    margin: 30px;
+}
+.img-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(150px,150px));
+    grid-gap: 100px;
+    justify-content: center;
+    align-items: center;
+    grid-auto-flow: dense;
+    padding: 1rem;
+}
+.img-item{
+    max-width: 100%;
+    display: flex;
+    align-items: center;
+    object-fit: cover;
 }
 /*Fin del Estilo para el articulo*/
+
 /*Inicio de estilos para el footer*/
 .footer{
     margin-top: auto;
+    border-top: 1px solid white;
 }
 .contenedor-logos{
     display: grid;
@@ -68,6 +90,7 @@ body{
     justify-content: center;
     align-items: center;
     grid-auto-flow: dense;
+    padding: 1rem;
 }
 .logos-redes{
     width: 100%;
@@ -77,3 +100,4 @@ body{
 .logos-redes:hover{
     filter: none;
 }
+/*Fin de Estilos para el Footer*/
