--- a/css/style.css
+++ b/css/style.css
@@ -6,18 +6,21 @@ body{
     background-image: radial-gradient(circle,rgb(44, 44, 46),rgb(0, 0, 0));
     color: #eee;
     margin: 0;
+    padding: 0;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     font-family:'Montserrat','Open Sans','Roboto', sans-serif;
 }
+/*Quitando todos los stilos a los enlaces*/
 /*Estilos del Header*/
 .header,
 .contenedor{
     width: 100%;
-    padding: 5vmin;
+    padding: 1vmin;
     display: flex;
     flex-direction: row;
+    margin-bottom: 30px;
 }
 .logo img{
    justify-content: start;
@@ -45,6 +48,16 @@ body{
     width: 200px;
     line-height: 50px;
 }
+.menu-item a{
+    text-decoration: none;
+    cursor: pointer;
+}
+a:visited{
+    color: inherit;
+}
+a:link{
+    color: inherit;
+}
 .menu-item:hover{
     border-right: 1px solid white;
     border-left: 1px solid white;
@@ -55,25 +68,38 @@ body{
 
 /*Inicio de Estilos para el Articulo*/
 .articulo{
+    display: flex;
+    flex-direction: column;
     font-family: 'Roboto';
     font-size: 1rem;
     width: 100%;
-    margin: 30px;
+    padding: 2vmin;
+}
+.info_personal{
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 30px;
+}
+.sobre_mi{
+    width: 50%;
 }
 .img-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(150px,150px));
+    grid-template-columns: repeat(auto-fill,minmax(150px,150px));
     grid-gap: 100px;
     justify-content: center;
     align-items: center;
     grid-auto-flow: dense;
-    padding: 1rem;
+    padding: 2vmin;
 }
 .img-item{
     max-width: 100%;
     display: flex;
     align-items: center;
     object-fit: cover;
+}
+.img-item:hover{
+    transform: scale(1.2);
 }
 /*Fin del Estilo para el articulo*/
 
@@ -83,12 +109,12 @@ body{
 }
 .contenedor-logos{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(100px,100px));
+    grid-template-columns: repeat(auto-fit,minmax(50px,75px));
     grid-gap: 100px;
     justify-content: center;
     align-items: center;
     grid-auto-flow: dense;
-    padding: 1rem;
+    padding: 2vmin;
 }
 .logos-redes{
     width: 100%;
@@ -97,5 +123,6 @@ body{
 }
 .logos-redes:hover{
     filter: none;
+    transform: scale(1.2);
 }
 /*Fin de Estilos para el Footer*/
