--- a/css/style.css
+++ b/css/style.css
@@ -68,20 +68,41 @@ a:link{
 
 /*Inicio de Estilos para el Articulo*/
 .articulo{
+    background-color:  #fffbfb;
+    color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     font-family: 'Roboto';
     font-size: 1rem;
     width: 100%;
+    height: 50rem;
     padding: 2vmin;
 }
 .info_personal{
     display: flex;
-    align-items: flex-end;
+    flex-direction: row;
+    flex-basis: auto;
     margin-bottom: 30px;
 }
 .sobre_mi{
+    width: 30%;
+    padding: 2vmin;
+    text-align: left;
+    font-size: 2rem;
+}
+.imagen_personal{
+    display: flex;
     width: 50%;
+    justify-content: flex-end;
+    align-items: end;
+}
+.imagen_personal img{
+    object-position: right;
+    object-fit: contain;
+    height: 300px;
+}
+.title{
+    text-align: center;
 }
 .img-container{
     display: grid;
