--- a/css/media_animaciones.css
+++ b/css/media_animaciones.css
@@ -1,22 +1,7 @@
-/*Escritorios*/
-@media (min-width:1200px ){
-    .col-lg-12{width:100%;}
-    .col-lg-11{width:91.66667%}
-    .col-lg-10{width: 83.33333%;}
-    .col-lg-9{width: 75%;}
-    .col-lg-8{width: 66.66667%;}
-    .col-lg-7{width: 58.33333%;}
-    .col-lg-6{width:50%;}
-    .col-lg-5{width:41.66667%;}
-    .col-lg-4{width:33.33333% ;}
-    .col-lg-3{width:25% ;}
-    .col-lg-2{width: 16.66667%;}
-    .col-lg-1{width: 8.33333%;}
-}
 /*Tablets*/
 @media (max-width:1199px) and (min-width:768px){
     .col-md-12{width:100%;}
-    .col-md-11{width:91.66667%}
+    .col-md-11{width:91.66667%} 
     .col-md-10{width: 83.33333%;}
     .col-md-9{width: 75%;}
     .col-md-8{width: 66.66667%;}
@@ -27,11 +12,11 @@
     .col-md-3{width:25% ;}
     .col-md-2{width: 16.66667%;}
     .col-md-1{width: 8.33333%;}
-    .img-container{
-        grid-column: 1/ span 3;}
-    .contenedor-logos{
-        grid-column: 1/ span 3;
-        }
+    .list-item{
+        font-size: 3vh;
+        padding-right: 20px;
+        margin-right: 10px;
+    }
         }
 /*Mobile phone*/
 @media (max-width:767px) and (min-width:576px){
@@ -47,6 +32,22 @@
     .col-sm-3{width:25% ;}
     .col-sm-2{width: 16.66667%;}
     .col-sm-1{width: 8.33333%;}
+    .list-item{
+        font-size: 4vh;
+        margin-right: 40px;
+    }
+    .header{
+        flex-direction: column;
+    }
+    main{
+        margin-top: 300px;
+    }
+    .sobre_mi{
+        flex-direction: column;
+    }
+    .texto_sobre_mi{
+        font-size: 2vh;
+    }
 }
 /*Mobile Phones extra small*/
 @media (max-width:575px ){
@@ -62,46 +63,45 @@
     .col-3{width:25% ;}
     .col-2{width: 16.66667%;}
     .col-1{width: 8.33333%;}
+    .list-item{
+        font-size: 3vh;
+        margin-right: 40px;
+    }
+    .header{
+        flex-direction: column;
+    }
+    main{
+        margin-top: 300px;
+    }
+    .sobre_mi{
+        flex-direction: column;
+    }
+    .texto_sobre_mi{
+        font-size: 2vh;
+    }
 }
-@keyframes logo_animation {
+@keyframes programador {
     0%{
-        left: 100px;
         opacity: 0;
     }
     50%{
-        left: 50px;
         opacity: 0.5;
     }
     100%{
-        left: 0px;
         opacity: 1;
     }
 }
-@keyframes logo_lenguage {
+@keyframes skills {
     0%{
+        opacity: 0;
         right: 100px;
-        opacity: 0;
     }
     50%{
+        opacity: 0.5;
         right: 50px;
-        opacity: 0.5;
     }
     100%{
+        opacity: 1;
         right: 0px;
-        opacity: 1;
-    }
-}
-@keyframes footer_logo{
-    0%{
-        top: 100px;
-        opacity: 0;
-    }
-    50%{
-        top: 50px;
-        opacity: 0.5;
-    }
-    100%{
-        top: 0px;
-        opacity: 1;
     }
 }
