--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,17 @@
+:root{
+    --main-text-color: rgb(93,103,91);
+    --div-bg-color: rgba(226,175,222,0.5);
+}
 *{
     box-sizing: border-box;
 }
 body{
-    background-color: black;
-    color: white;
+    background-color: rgb(255, 255, 255);
+    color: var(--main-text-color);
 }
 /*Inicio del Estilo del Header*/
 .header{
-    background-color: black;
+    background: linear-gradient(to right,rgb(50,222,138),rgb(24, 189, 109));
     display: flex;
     position: fixed;
     z-index: 10;
@@ -15,19 +19,11 @@ body{
     top: 0;
     right: 0;
     left: 0;
-    min-height: 75px;
+    min-height: 25px;
+    height: 5vh;
     width: 100%;
     align-items: center;
     justify-content: space-around;
-}
-.icono_principal{
-    width: 100%;
-    height: auto;
-    max-width: 250px;
-    margin: 0 auto 10px auto;
-    display: flex;
-    align-items: center;
-    text-align: center;
 }
 nav ul{
     list-style: none;
@@ -36,7 +32,7 @@ nav ul{
 }
 .list-item{
     margin-right: 50px;
-    font-size: 5vh;
+    font-size: 2.5vh;
 }
 a{
     text-decoration: none;
@@ -49,79 +45,125 @@ a:visited{
 /*Inicio de estilos main*/
 main{
     position: relative;
-    margin: 150px auto 100px auto;
+    margin: 20px auto 100px auto;
 }
 .sobre_mi{
     position: relative;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
+}
+h3{
+    text-align: center;
 }
 .texto_sobre_mi{
-    margin: 10px auto 10px 20px;
-    text-align: left;
+    margin: 10px auto 10px auto;
+    text-align: center;
     font-size: 3vh;
 }
 .imagen_programador{
     position: relative;
     width: 100%;
     height: auto;
-    min-width: 400px;
-    max-width: 5700px;
+    min-width: 150px;
+    max-width: 250px;
     left: 0;
+    border-radius: 100%;
     animation-name: programador;
     animation-timing-function: cubic-bezier(0.2,0.2,0.8,0.8);
     animation-duration: 3500ms;
 }
-h2{
-    text-align: center;
-}
 .container-lenguage{
-    display: grid;
+    display: flex;
+    flex-direction: row;
     position: relative;
-    grid-template-columns: repeat(auto-fill,minmax(250px,300px));
-    grid-auto-flow: dense;
     align-items: center;
-    justify-content: center;
-    text-align: center;
-    animation-name: skills;
-    animation-timing-function: cubic-bezier(0.2,0.2,0.8,0.8);
-    animation-duration: 3500ms;
+    justify-content: space-evenly;
 }
 .html-5{
     width: 100%;
-    max-width: 250px ;
-    height: auto;    
+    max-width: 80px;
+    height: auto;
+    margin-right: 5px;
 }
 .css-3{
     width: 100%;
-    max-width: 250px ;
-    height: auto;    
+    max-width: 80px;
+    height: auto;
+    margin-right: 5px;    
 }
-.javascript{
+.java{
     width: 100%;
-    max-width: 250px ;
-    height: auto;    
+    max-width: 80px;
+    height: auto;
+    margin-right: 5px;    
 }
-.python{
+.kotlin{
     width: 100%;
-    max-width: 250px ;
-    height: auto;    
+    max-width: 80px;
+    height: auto;
+    margin-right: 5px;    
+}
+.android{
+    width: 100%;
+    max-width: 80px;
+    height: auto;
+    margin-right: 5px;    
+}
+.container-about-me{
+    background: var(--div-bg-color);
+    box-shadow: 1px 1px 5px rgb(15, 15, 15);
+    border-radius: 0.25rem;
+    padding: 0.75rem;
+    width: 65vmax;
+    max-width: 900px;
+}
+.image-card{
+    max-height: 200px;
+    width: 100%;
+    object-fit: cover;
+}
+.card-project{
+    box-shadow:1px 1px 5px rgb(15, 15, 15) ;
+    padding: 0.95rem;
+    justify-items: center;
+    align-items: center;
+    max-width: 300px;
+    height: auto;
+    border-radius: 0.25rem;
+}
+.card-text{
+    text-align: left;
+    padding: 0.75rem;
+}
+div .card-link{
+    background: linear-gradient(to right,rgb(230, 100, 101), rgb(145, 152, 229));
+    display: block;
+    text-decoration: none;
+    margin: 2px auto 2px auto;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    padding: 0.25rem;
+}
+div .card-link:visited{
+    text-decoration: none;
+    color: rgb(255, 255, 255);
 }
 /*Fin de estilos main*/
 footer{
     margin-top: auto;
-    background-color: rgb(15, 15, 15);
+    max-height: 100px;
+    background: linear-gradient(to right,rgb(50,222,138),rgb(24, 189, 109));
 }
 .logos-redes{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: right;
 }
 .logos-redes figure{
     width: 100%;
-    max-width: 150px;
+    max-width: 50px;
     height: auto;
 }
